--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="header">
         <div class="header1">
             <div class="nameAndRegion">
-              <p class="name">Facileeeee</p>
+              <p class="name">Facile</p>
                 <p class="tagLine"></p>
             </div>
             <div class="searchAndProfile">
